--- a/examples/wsclientWebapp/webservice/service/pom.xml
+++ b/examples/wsclientWebapp/webservice/service/pom.xml
@@ -96,6 +96,19 @@
 			<version>1.6.1</version>
 			<scope>runtime</scope>
 		</dependency>
-
+                <dependency>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-context</artifactId>
+                        <version>3.0.6.RELEASE</version>
+                        <type>jar</type>
+                        <scope>compile</scope>
+                </dependency>
+                <dependency>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-web</artifactId>
+                        <version>3.0.6.RELEASE</version>
+                        <type>jar</type>
+                        <scope>compile</scope>
+                </dependency>
 	</dependencies>
 </project>
