--- a/examples/wsclientWebapp/webservice/service/pom.xml
+++ b/examples/wsclientWebapp/webservice/service/pom.xml
@@ -93,20 +93,20 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-jdk14</artifactId>
-			<version>1.6.1</version>
+			<version>${slf4j.version}</version>
 			<scope>runtime</scope>
 		</dependency>
                 <dependency>
                         <groupId>org.springframework</groupId>
                         <artifactId>spring-context</artifactId>
-                        <version>3.0.6.RELEASE</version>
+                        <version>${spring.version}</version>
                         <type>jar</type>
                         <scope>compile</scope>
                 </dependency>
                 <dependency>
                         <groupId>org.springframework</groupId>
                         <artifactId>spring-web</artifactId>
-                        <version>3.0.6.RELEASE</version>
+                        <version>${spring.version}</version>
                         <type>jar</type>
                         <scope>compile</scope>
                 </dependency>
