--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
    <name>Apache Fediz</name>
    <packaging>pom</packaging>
 
+   <parent>
+       <groupId>org.apache</groupId>
+       <artifactId>apache</artifactId>
+       <version>9</version>
+   </parent>
+
    <properties>
       <slf4j.version>1.6.1</slf4j.version>
       <spring.version>3.0.7.RELEASE</spring.version>
@@ -74,6 +80,7 @@
     <scm>
         <connection>scm:svn:http://svn.apache.org/repos/asf/fediz/trunk</connection>
         <developerConnection>scm:svn:https://svn.apache.org/repos/asf/fediz/trunk</developerConnection>
+        <url>http://svn.apache.org/repos/asf/fediz/trunk</url>
     </scm>
 
     <issueManagement>
