--- a/plugins/core/pom.xml
+++ b/plugins/core/pom.xml
@@ -1,22 +1,15 @@
-<!--
-  Licensed to the Apache Software Foundation (ASF) under one
-  or more contributor license agreements. See the NOTICE file
-  distributed with this work for additional information
-  regarding copyright ownership. The ASF licenses this file
-  to you under the Apache License, Version 2.0 (the
-  "License"); you may not use this file except in compliance
-  with the License. You may obtain a copy of the License at
- 
-  http://www.apache.org/licenses/LICENSE-2.0
- 
-  Unless required by applicable law or agreed to in writing,
-  software distributed under the License is distributed on an
-  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-  KIND, either express or implied. See the License for the
-  specific language governing permissions and limitations
-  under the License.
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor 
+	license agreements. See the NOTICE file distributed with this work for additional 
+	information regarding copyright ownership. The ASF licenses this file to 
+	you under the Apache License, Version 2.0 (the "License"); you may not use 
+	this file except in compliance with the License. You may obtain a copy of 
+	the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required 
+	by applicable law or agreed to in writing, software distributed under the 
+	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
+	OF ANY KIND, either express or implied. See the License for the specific 
+	language governing permissions and limitations under the License. -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -27,7 +20,7 @@
 	</parent>
 	<artifactId>fediz-core</artifactId>
 	<name>Apache Fediz Plugin Core</name>
-	<packaging>jar</packaging>
+	<packaging>bundle</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -43,15 +36,15 @@
 		<dependency>
 			<groupId>org.apache.ws.security</groupId>
 			<artifactId>wss4j</artifactId>
-			<version>${wss4j.version}</version>
+ 			<version>${wss4j.version}</version>
 			<scope>compile</scope>
 		</dependency>
-                <dependency>
-                    <groupId>net.sf.ehcache</groupId>
-                    <artifactId>ehcache-core</artifactId>
-                    <version>${ehcache.version}</version>
-                    <scope>compile</scope>
-                </dependency>
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache-core</artifactId>
+			<version>${ehcache.version}</version>
+			<scope>compile</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-jdk14</artifactId>
@@ -70,63 +63,100 @@
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
-   <build>
-     <plugins>
-	    <plugin>
-	    <groupId>com.sun.tools.xjc.maven2</groupId>
-	    <artifactId>maven-jaxb-plugin</artifactId>
-        <version>1.1.1</version>
-	    <executions>
-                <execution>
-   	        <goals>
-                    <goal>generate</goal>
-	        </goals>
- 	        </execution>
-	    </executions>
-	    <configuration>
-	        <schemaDirectory>${basedir}/src/main/resources</schemaDirectory>
-	        <generatePackage>org.apache.cxf.fediz.core.config.jaxb</generatePackage>
-	        <includeSchemas>
-                    <includeSchema>**/FedizConfig.xsd</includeSchema>
-	        </includeSchemas>
-	        <excludeSchemas>
-	             <excludeSchema>test*.xsd</excludeSchema>
-	        </excludeSchemas>
-	        <includeBindings>
-	            <includeBinding>*.xjb</includeBinding>
-	        </includeBindings>
-	        <strict>true</strict>
-	        <verbose>true</verbose>
- 	    </configuration>
-	    </plugin>
-	<plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>2.1.2</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>jar-no-fork</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-         <plugin>
-             <groupId>org.apache.maven.plugins</groupId>
-             <artifactId>maven-javadoc-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>attach-javadocs</id>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-         </plugin>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.sun.tools.xjc.maven2</groupId>
+				<artifactId>maven-jaxb-plugin</artifactId>
+				<version>1.1.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<schemaDirectory>${basedir}/src/main/resources</schemaDirectory>
+					<generatePackage>org.apache.cxf.fediz.core.config.jaxb</generatePackage>
+					<includeSchemas>
+						<includeSchema>**/FedizConfig.xsd</includeSchema>
+					</includeSchemas>
+					<excludeSchemas>
+						<excludeSchema>test*.xsd</excludeSchema>
+					</excludeSchemas>
+					<includeBindings>
+						<includeBinding>*.xjb</includeBinding>
+					</includeBindings>
+					<strict>true</strict>
+					<verbose>true</verbose>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.1.2</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>2.3.4</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Implementation-Title>Apache CXF Fediz</Implementation-Title>
+                        <Implementation-Vendor>The Apache Software Foundation</Implementation-Vendor>
+                        <Implementation-Vendor-Id>org.apache</Implementation-Vendor-Id>
+                        <Implementation-Version>${project.version}</Implementation-Version>
+                        <Specification-Title>Apache CXF Fediz</Specification-Title>
+                        <Specification-Vendor>The Apache Software Foundation</Specification-Vendor>
+                        <Specification-Version>${project.version}</Specification-Version>
 
-        </plugins>
-    </build>    
+                        <Export-Package>
+                              org.apache.cxf.fediz.*;version="${project.version}"
+                        </Export-Package>
+                        <Import-Package>
+                              !org.apache.cxf.fediz.*,
+                              org.apache.ws.security.*,
+                              javax.xml.crypto.*,
+                              org.apache.xml.security.*,
+                              org.bouncycastle.*;resolution:=optional,
+                              org.apache.jcp.xml.dsig.internal.dom.*,
+                              org.opensaml.*;resolution:=optional,
+                              *;resolution:=optional
+                        </Import-Package>
+                        <!-- 
+                        <DynamicImport-Package>
+                              org.bouncycastle.jce.provider,
+                              org.apache.ws.security.components.crypto,
+                              org.apache.ws.security.saml
+                        </DynamicImport-Package>
+                         -->
+                    </instructions>
+                </configuration>
+            </plugin>
+		</plugins>
+	</build>
 </project>
  
