--- a/pom.xml
+++ b/pom.xml
@@ -32,19 +32,22 @@
     </parent>
 
     <properties>
+        <commons.lang.version>3.0.1</commons.lang.version>
+        <cxf.version>2.6.5</cxf.version>
+        <cxf.build-utils.version>2.4.1</cxf.build-utils.version>
         <ehcache.version>2.5.1</ehcache.version>
+        <jetty.version>8.1.3.v20120416</jetty.version>
+        <junit.version>4.8.2</junit.version>
+        <servlet.version>2.5</servlet.version>
         <slf4j.version>1.6.5</slf4j.version>
         <spring.version>3.0.7.RELEASE</spring.version>
         <tomcat.version>7.0.27</tomcat.version>
-        <jetty.version>8.1.3.v20120416</jetty.version>
-        <junit.version>4.8.2</junit.version>
-        <tomcat.url>http://localhost:8080/manager/text</tomcat.url>
-        <cxf.version>2.6.5</cxf.version>
         <wss4j.version>1.6.9</wss4j.version>
+
+        <tomcat.url>http://localhost:8080/manager/text</tomcat.url>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>1.6</jdk.version>
         <compiler.fork>false</compiler.fork>
-        <cxf.build-utils.version>2.4.1</cxf.build-utils.version>
 
         <fediz.protect-xmlschema-collections>false</fediz.protect-xmlschema-collections>
         <fediz.surefire.fork.mode>once</fediz.surefire.fork.mode>
