--- a/examples/wsclientWebapp/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/examples/wsclientWebapp/webapp/src/main/webapp/WEB-INF/web.xml
@@ -3,10 +3,8 @@
                       http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0" metadata-complete="true">
 
-	<description>
-    WS Federation Tomcat Example
-    </description>
-	<display-name>WS Federation Tomcat Example</display-name>
+	<description>WS Federation WS-Client Web Application Example</description>
+	<display-name>WS Federation WS-Client Web Application Example</display-name>
 
   <context-param>
     <param-name>contextConfigLocation</param-name>
@@ -45,8 +43,14 @@
 
 	<security-role>
 		<role-name>Manager</role-name>
+	</security-role>
+	<security-role>
 		<role-name>User</role-name>
+	</security-role>
+	<security-role>
 		<role-name>Admin</role-name>
+	</security-role>
+	<security-role>
 		<role-name>Authenticated</role-name>
 	</security-role>
 
