--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 
     <properties>
         <commons.lang.version>3.0.1</commons.lang.version>
-        <cxf.version>2.6.5</cxf.version>
+        <cxf.version>2.6.6-SNAPSHOT</cxf.version>
         <cxf.build-utils.version>2.4.1</cxf.build-utils.version>
         <ehcache.version>2.5.1</ehcache.version>
         <jetty.version>8.1.3.v20120416</jetty.version>
