--- a/services/idp/src/main/webapp/WEB-INF/web.xml
+++ b/services/idp/src/main/webapp/WEB-INF/web.xml
@@ -109,7 +109,11 @@
 		<init-param>
 			<param-name>sts.rstr.content-type</param-name>
 			<param-value>TOKEN</param-value>
-		</init-param>			
+		</init-param>	
+		<init-param>
+			<param-name>sts.use.wfresh.for.ttl</param-name>
+			<param-value>true</param-value>
+		</init-param>	
 	</filter>
 	
 	<filter>
@@ -158,7 +162,7 @@
 		<init-param>
 			<param-name>sts.claims.required</param-name>
 			<param-value>true</param-value>
-		</init-param>		
+		</init-param>
 	</filter>	
 
 	<filter>
