--- a/services/idp/src/main/webapp/WEB-INF/web.xml
+++ b/services/idp/src/main/webapp/WEB-INF/web.xml
@@ -53,6 +53,10 @@
 			<param-name>token.internal.lifetime</param-name>
 			<param-value>7200</param-value>
 		</init-param>
+		<init-param>
+			<param-name>sts.use.wfresh.for.ttl</param-name>
+			<param-value>true</param-value>
+		</init-param>
 		
 <!--		
 		<init-param>
