--- a/apache-fediz/pom.xml
+++ b/apache-fediz/pom.xml
@@ -22,7 +22,7 @@
     <groupId>org.apache.cxf.fediz</groupId>
     <artifactId>apache-fediz</artifactId>
     <version>1.1.0-SNAPSHOT</version>
-    <name>Apache Fediz</name>
+    <name>Apache Fediz Assembly</name>
     <packaging>pom</packaging>
 
     <parent>
