--- a/examples/websphereWebapp/pom.xml
+++ b/examples/websphereWebapp/pom.xml
@@ -27,8 +27,8 @@
     </parent>
 
     <groupId>org.apache.cxf.fediz.examples</groupId>
-    <artifactId>simpleWebapp</artifactId>
-    <name>Fediz Example: SimpleWebapp</name>
+    <artifactId>websphereWebapp</artifactId>
+    <name>Fediz Example: WebsphereWebapp</name>
     <packaging>war</packaging>
 
     <properties>
@@ -57,18 +57,6 @@
     </dependencies>
 
     <build>
-        <plugins>
-            <plugin><!--for mvn tomcat:deploy/:undeploy/:redeploy -->
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>tomcat-maven-plugin</artifactId>
-                <version>1.1</version>
-                <configuration>
-                    <server>myTomcat</server>
-                    <url>http://localhost:8080/manager/text</url>
-                    <path>/${project.build.finalName}</path>
-                </configuration>
-            </plugin>
-        </plugins>
         <!-- Name of the generated WAR file -->
         <finalName>fedizhelloworld</finalName>
     </build>
