--- a/plugins/core/pom.xml
+++ b/plugins/core/pom.xml
@@ -30,7 +30,7 @@
     <packaging>bundle</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <cxf.xjc-utils.version>3.0.5-SNAPSHOT</cxf.xjc-utils.version>
+        <cxf.xjc-utils.version>3.0.5</cxf.xjc-utils.version>
     </properties>
     <dependencies>
         <dependency>
