--- a/apache-fediz/pom.xml
+++ b/apache-fediz/pom.xml
@@ -68,6 +68,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.cxf.fediz</groupId>
+            <artifactId>fediz-jetty9</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf.fediz</groupId>
             <artifactId>fediz-spring</artifactId>
             <version>${project.version}</version>
         </dependency>
