--- a/services/oidc/src/main/resources/log4j.properties
+++ b/services/oidc/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # Set root category priority to INFO and its only appender to CONSOLE.
 #log4j.rootCategory=FATAL, CONSOLE
-log4j.rootCategory=INFO, CONSOLE, LOGFILE
+log4j.rootCategory=INFO, LOGFILE
 log4j.logger.org.apache.cxf.fediz.service.oidc=DEBUG, CONSOLE, LOGFILE
 log4j.additivity.org.apache.cxf.fediz.service.oidc = false
 log4j.logger.org.springframework.security=DEBUG, LOGFILE
