--- a/services/sts/src/main/resources/log4j.properties
+++ b/services/sts/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # Set root category priority to INFO and its only appender to CONSOLE.
 #log4j.rootCategory=FATAL, CONSOLE
-log4j.rootLogger=INFO, CONSOLE
+log4j.rootLogger=INFO, LOGFILE
 log4j.logger.org.apache.cxf.sts=DEBUG, CONSOLE, LOGFILE
 log4j.additivity.org.apache.cxf.sts=false
 log4j.logger.org.apache.cxf.fediz=DEBUG, CONSOLE, LOGFILE
